[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "css-mcp"
version = "0.1.3"
description = "Universal CSS analysis and documentation MCP server with 150+ metrics"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.13"
authors = [
    { name = "Les Leslie", email = "les@lesleslie.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastmcp>=0.6.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "tinycss2>=1.3.0",
    "cssselect>=1.2.0",
    "mcp-common>=0.1.0",
    "oneiric>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]

[project.scripts]
css-mcp = "css_mcp.server:main"

[project.urls]
Homepage = "https://github.com/lesleslie/css-mcp"
Repository = "https://github.com/lesleslie/css-mcp"

[tool.hatch.build.targets.wheel]
packages = ["css_mcp"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "crackerjack>=0.54.3",
    "session-buddy>=0.14.3",
]
